# panes

./: .gitignore  CHANGELOG.md  LICENSE-MIT  NOTICE  README.md  README.pt-BR.md  flake.nix  latest.json  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
landing-page/: index.html  style.css
scripts/: build-desktop.mjs
src/: App.tsx  globals.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: claude-agent-sdk-server.mjs
src-tauri/sidecar-dist/: claude-agent-sdk-server.mjs
src-tauri/src/: lib.rs  linux_appimage.rs  linux_webkit.rs  locale.rs  models.rs  state.rs
src-tauri/src/commands/: app.rs  chat.rs  engines.rs  files.rs  git.rs  terminal.rs  threads.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/engines/: claude_sidecar.rs  codex.rs  codex_event_mapper.rs  events.rs  mod.rs
src-tauri/src/git/: mod.rs  multi_repo.rs  repo.rs  worktree.rs
src-tauri/src/terminal/: mod.rs
src/components/chat/: ChatPanel.tsx  MessageBlocks.tsx  ModelPicker.tsx  PermissionPicker.tsx  chatInputShortcuts.test.ts  chatInputShortcuts.ts  toolInputApproval.ts
src/components/editor/: CodeMirrorEditor.tsx  FileEditorPanel.tsx
src/lib/: ipc.ts  linuxWindowFrame.test.ts  linuxWindowFrame.ts  nativeEditActions.ts  perfTelemetry.ts  terminalRenderingSettings.ts  windowActions.test.ts  windowActions.ts  windowDrag.ts
src/stores/: chatStore.test.ts  chatStore.ts  gitStore.ts  terminalStore.multiSession.test.ts  terminalStore.ts  threadStore.ts  uiStore.ts
(+29 files in other folders)
